# sfinder-gui

./: .gitignore  AGENTS.md  LICENSE  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml  rust-tests.yml
media/Tex/: e642bbe2b5a12dfd.tex
public/: info.html  overlay.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: color_split.rs  commands.rs  kick_table.rs  lib.rs  recognition.rs  sfinder.rs
src-tauri/tests/: board_tests.rs  recognition_test.rs
src/components/forms/: CommandOptions.tsx  CommandRunner.tsx  SpinOptions.tsx
src/components/fumen/: FieldGrid.tsx  FumenEditorEmbed.tsx  FumenToolbar.tsx
src/components/layout/: Header.tsx
src/components/output/: OutputViewer.tsx
src/hooks/: usePieceKeys.ts  useSfinderCommand.ts
src/i18n/: translations.ts
src/lib/: output-parser.ts  sfinder-args.ts
src/routes/: CoverPage.tsx  FumenEditorPage.tsx  PathPage.tsx  PercentPage.tsx  RecognizePage.tsx  RenPage.tsx  SettingsPage.tsx  SetupPage.tsx  SpinPage.tsx  ViewFumenPage.tsx
src/stores/: appStore.ts  displayStore.ts  fumenStore.ts  pageStore.ts
src/types/: app.ts  sfinder.ts
