[package]
name = "sfinder-gui"
version = "1.0.3"
description = "Desktop GUI wrapper for solution-finder"
authors = [""]
edition = "2021"

[lib]
name = "sfinder_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros"] }
image = "0.25.10"
imageproc = "0.27.0"
screenshots = "0.8.10"
base64 = "0.22.1"
